[package]
name = "tubeloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
yt-dlp = "1.3.4"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
futures-util = "0.3"
url = "2.0"
thiserror = "1.0"

# 파일 맨 아래에 이 섹션을 추가
[patch.crates-io]
# 'crates-io'에서 가져올 'some-crate'를 로컬 버전으로 덮어쓴다고 명시
#some-crate = { path = "../some-crate" } # 경로는 실제 위치에 맞게 조정
yt-dlp = { path = "./libs/yt-dlp-develop" }